Fix bug where superscript links’ underline was too low

--- a/assets/scss/superscripts.scss
+++ b/assets/scss/superscripts.scss
@@ -3,6 +3,6 @@ sup {
 
   // Adjust link underline position.
   a {
-    background-position-y: 70%;
+    background-position-y: 70% !important;
   }
 }
